--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dice Game</title>
+    <title>🎲 Dice Game</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
@@ -30,7 +30,7 @@
   </body>
 
   <footer>
-    Created By 🎲 Tannu Kumari 🎲 With Love
+    Created By 🎲 Tannu Kumari 🎲 With 💛
   </footer>
 
 </html>
